--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5.0.0
         with:
-          go-version: '1.21'
+          cache: false
+          go-version: '1.22'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
