--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,41 +3,41 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "axios": "^1.6.5",
-    "chart.js": "^4.4.1",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "clipboard": "^2.0.11",
-    "core-js": "^3.29.0",
+    "core-js": "^3.37.1",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "qrcode.vue": "^3.4.1",
-    "roboto-fontface": "*",
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.0",
-    "vue-chartjs": "^5.3.0",
-    "vue-i18n": "^9.8.0",
-    "vue-router": "^4.0.0",
+    "vue-chartjs": "^5.3.1",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.2",
     "vue3-persian-datetime-picker": "^1.2.2",
-    "vuetify": "^3.0.0"
+    "vuetify": "^3.6.7"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.4",
-    "@types/node": "^18.15.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "@babel/types": "^7.24.5",
+    "@types/node": "^18.19.33",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
     "material-design-icons-iconfont": "^6.7.0",
-    "sass": "^1.60.0",
-    "typescript": "^5.0.0",
-    "unplugin-fonts": "^1.0.3",
+    "sass": "^1.77.2",
+    "typescript": "^5.4.5",
+    "unplugin-fonts": "^1.1.1",
     "vite": "^4.5.3",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.2.0"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-tsc": "^1.8.27"
   }
 }
