--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clipboard": "^2.0.11",
     "core-js": "^3.37.1",
     "moment": "^2.30.1",
+    "notivue": "^2.4.4",
     "pinia": "^2.1.7",
     "qrcode.vue": "^3.4.1",
     "roboto-fontface": "^0.10.0",
