--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          cache: false
+          go-version-file: backend/go.mod
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
