--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -17,22 +17,13 @@
   "route": {
     "rules": [
       {
-        "protocol": "dns",
-        "outbound": "dns-out"
+        "protocol": [
+          "dns"
+        ],
+        "outbound": "dns-out",
+        "action": "route"
       }
     ]
   },
-  "experimental": {
-    "v2ray_api": {
-      "listen": "127.0.0.1:1080",
-      "stats": {
-        "enabled": true,
-        "inbounds": [],
-        "outbounds": [
-          "direct"
-        ],
-        "users": []
-      }
-    }
-  }
+  "experimental": {}
 }
