--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.1",
   "private": true,
   "scripts": {
     "dev": "vite --host",
