--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           - armv5
           - 386
           - s390x
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           cache: false
-          go-version-file: backend/go.mod
+          go-version-file: go.mod
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
